Fix content padding on mobile. Remove bottom-static footer.

--- a/css/main.css
+++ b/css/main.css
@@ -22,15 +22,15 @@ html, body {
 
 body {
     border-top: 20px solid;
-    position: absolute;
+    /*position: absolute;
     top: 0;
     width: 100%;
     padding-top: 0px;
-    margin-top: 0;
+    margin-top: 0;*/
     background-image: url("/img/natural_paper.png");
     background-repeat: repeat;
-    padding-left: 0;
-    padding-right: 0;
+/*    padding-left: 0;
+    padding-right: 0;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -89,7 +89,12 @@ h1, h2, h3, h4, h5, h6 {
 
 /*------------------- HEADER -------------------*/
 
-
+@media (max-width: 767px) {
+    header {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
+}
 
 .svg header.main-header {
     background-image: url("/img/fleur-pattern.svg");
@@ -195,6 +200,13 @@ header.main-header .brand object {
     float: none;
 }
 
+@media (max-width: 767px) {
+    #nav-wrapper {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
+}
+
 @media (min-width: 640px) {
     .navbar-inner {
         text-align: center;
@@ -203,6 +215,11 @@ header.main-header .brand object {
     .navbar-inner .nav {
         display: inline-block;
         line-height: 0;
+    }
+
+    .navbar .nav > li > a {
+        padding-top: 4px;
+        padding-bottom: 4px;
     }
 
     .navbar-inner .nav-collapse.collapse {
@@ -370,6 +387,13 @@ a.menu-toggle {
     /*width: 980px;*/
 }
 
+@media (max-width: 767px) {
+    .divider {
+        margin-right: -20px;
+        margin-left: -20px;
+    }
+}
+
 
 
 /*------------------- BLOG -------------------*/
@@ -439,17 +463,20 @@ h2.post-title {
     display: inline;
 }
 
+
+
+
 /*------------------- FOOTER -------------------*/
 
 
 
 footer {
 
-    z-index: 2;
+/*    z-index: 2;
     position: absolute;
     bottom: 0;
 
-    width: 100%;
+    width: 100%;*/
     height: 110px;
     background-color: #2A2C31;
     color: #FFFEDF;
@@ -461,6 +488,13 @@ footer {
 
 #push {
     height: 140px;
+}
+
+@media (max-width: 767px) {
+    footer {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
 }
 
 
